src/components/PageSection.module.css
.section {
    display: flex;
    min-height: 100vh;
    width: 100vw;
    flex-direction: column;
    position: relative;
    scroll-padding-top: 0;
}

.subtractNavHeight {
    min-height: calc(100vh - var(--navbar-height));
}

.navHeight {
    height: var(--navbar-height);
}

.section > * {
    z-index: 1;
}

.bottomBorder {
    border-bottom: 1px solid gray;
}

.sectionBackground {
    object-fit: cover;
    user-select: none;
    z-index: 0;
}

